# distr-db

./: .env  README.md  docker-compose.yml
db-write/: Dockerfile
frontend/: Dockerfile  app.py  requirements.txt
frontend/static/: style.css
frontend/templates/: edit.html  index.html  search.html
postgres/: Dockerfile  init.sql
trans-srv/: Dockerfile  __main__.py  database.ini  requirements.txt
transaction-server/: Dockerfile  __main__.py  config.py  requirements.txt
transaction-server-quart/: Dockerfile  requirements.txt  transaction_server.py
web-server/: .myform.html.swp  myform.html
wl_generator/: Dockerfile  Dockerfile_backup  newworld.cpp  start.sh
wl_generator/wl_generator/: CMakeLists.txt  CMakeLists.txt.backup  Sanitizers.cmake
wl_generator/wl_generator/app/: test_julia_set.cpp  test_queue.cpp  test_thread_pool.cpp  wl_generator.cpp
wl_generator/wl_generator/include/ra/: julia_set.hpp  queue.hpp  thread_pool.hpp
wl_generator/wl_generator/lib/: thread_pool.cpp
